# minimal-tetris-raylib-cpp

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  MinimalTetris.html  MinimalTetris.js  azure-pipelines.yml  build.ninja  cmake_install.cmake  index.data  index.html  index.js  index.wasm
.github/workflows/: deploy.yml
app/: AudioManager.cpp  AudioManager.h  Button.h  Colors.cpp  GameRenderer.cpp  GameRenderer.h  InputHandler.cpp  InputHandler.h  InputManager.cpp  InputManager.h  MobileInput.cpp  MobileInput.h  Transform2D.h  main.cpp
src/: GameState.cpp  GameState.h  Grid.cpp  Grid.h  InputAction.h  PieceVisual.h  Position.h  Tetromino.cpp  Tetromino.h  TetrominoTypes.cpp  TetrominoTypes.h  block.cpp  block.h  blocks.cpp  colors.cpp  game.cpp  game.h  grid.cpp  grid.h  main.cpp  shell.html
tests/: CMakeLists.txt  test_tetris.cpp
